# deployment_manager

./: .gitignore  Dockerfile  Gemfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
app/assets/stylesheets/: application.scss  meter.scss
app/controllers/: application_controller.rb  container_controller.rb  node_deployments_controller.rb  nodes_controller.rb  sessions_controller.rb
app/grids/: application_grid.rb  container_grid.rb  node_deployments_grid.rb  nodes_grid.rb
app/helpers/: application_helper.rb
app/javascript/: application.js
app/javascript/controllers/: ansi_color_controller.js  application.js  deployment_form_controller.js  meter_controller.js  replace_url_controller.js
app/models/: node.rb  node_deployment.rb  user.rb
app/services/: node_api_service.rb
app/views/container/: index.html.haml  logs.html.haml  show.html.haml
app/views/layouts/: application.html.erb  application.html.haml
config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  routes.rb
config/locales/: en.yml  simple_form.en.yml
db/: schema.rb
db/migrate/: 20251221175849_create_users.rb  20251227113913_create_nodes.rb  20251228132849_create_node_deployments.rb  20260102200930_allow_null_for_node_deployments_git_url.rb  20260102201235_change_column_default_for_node_port.rb
public/: install.sh  update.sh
server_agent/: .gitignore  Cargo.toml  build.sh  key.hash
server_agent/src/: main.rs  router.rs  util.rs
server_agent/src/services/: docker.rs  docker_compose.rs  github_runners.rs  health.rs  mod.rs
(+14 files in other folders)
