[package]
name = "server_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bollard = { version = "0.19.4", default-features = false, features = ["ssl", "pipe"] }
regex = "1.12.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
bcrypt = "0.17"
futures-util = "0.3.31"
url = "2.5.7"
